--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,15 @@ repository = "https://github.com/sigurd4/float_approx_math"
 default = ["sin", "sqrt"]
 no_array_trait = ["sqrt"]
 
-sin = ["dep:polynomial_ops"]
+sin = ["dep:polynomial_ops", "dep:array_trait"]
 sqrt = []
 
 [dependencies]
 moddef = "0.2.2"
 polynomial_ops = {version = "0.1.3", optional = true}
+array_trait = {version = "0.6.15", optional = true}
 
 [dev-dependencies]
-plotters = "0.3.5"
-linspace = "0.1.0"
-array_trait = "0.6.15"
+plotters = {}
+linspace = {}
+array_trait = {}
