--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,6 @@ polynomial_ops = {version = "0.1.5", optional = true}
 array_trait = {version = "0.6.17", optional = true}
 
 [dev-dependencies]
-plotters = "*"
-linspace = "*"
-array_trait = "*"
+plotters = "^0.3.5"
+linspace = "^0.1.0"
+array_trait = "^0.6.17"
