Allow for upstream versions in deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ sin = ["dep:polynomial_ops", "dep:array_trait"]
 sqrt = []
 
 [dependencies]
-moddef = "0.2.2"
-polynomial_ops = {version = "0.1.5", optional = true}
-array_trait = {version = "0.6.17", optional = true}
+moddef = "^0.2.2"
+polynomial_ops = {version = "^0.1.5", optional = true}
+array_trait = {version = "^0.6.17", optional = true}
 
 [dev-dependencies]
 plotters = "^0.3.5"
