--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,12 @@ sin = ["dep:polynomial_ops", "dep:array_trait"]
 sqrt = []
 
 [dependencies]
-moddef = "^0.2.2"
-polynomial_ops = {version = "^0.1.5", optional = true}
-array_trait = {version = "^0.6.17", optional = true}
+moddef = "0.2.2"
+polynomial_ops = {version = "0.1.6", optional = true}
+array_trait = {version = "0.6.18", optional = true}
+fn_zip = "0.1.2"
 
 [dev-dependencies]
-plotters = "^0.3.5"
-linspace = "^0.1.0"
-array_trait = "^0.6.17"
+plotters = "0.3.5"
+linspace = "0.1.0"
+array_trait = "0.6.18"
