--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,16 +14,16 @@ repository = "https://github.com/sigurd4/float_approx_math"
 default = ["sin", "sqrt"]
 no_array_trait = ["sqrt"]
 
-sin = ["dep:polynomial_ops", "dep:array_trait"]
+sin = ["dep:polynomial_ops", "dep:array__ops"]
 sqrt = []
 
 [dependencies]
 moddef = "0.2.2"
-polynomial_ops = {version = "0.1.6", optional = true}
-array_trait = {version = "0.6.18", optional = true}
+polynomial_ops = {version = "0.1.7", optional = true}
+array__ops = {version = "0.1.1", optional = true}
 fn_zip = "0.1.2"
 
 [dev-dependencies]
 plotters = "0.3.5"
-linspace = "0.1.0"
-array_trait = "0.6.18"
+linspace = "0.1.1"
+array__ops = "0.1.1"
